# med-management

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: snapshot.json
frontend/src/: App.tsx  api.test.ts  api.ts  styles.css  theme.ts  types.ts
frontend/src/components/: Controls.test.tsx  Controls.tsx  GraphView.tsx  Legend.tsx  SearchBar.test.tsx  SearchBar.tsx  SidePanel.tsx
scripts/: build-static.sh  build_drug_dataset.py  export_pharmacology_raw.py  export_raw_api.py  export_tables.py  pharmacology_wide.py  psychiatric_disorders.py
src/med_graph/: cli.py  snapshot.py
src/med_graph/api/: app.py  dependencies.py  routes.py  schemas.py
src/med_graph/graph/: client.py  executor.py  loader.py  schema.py
src/med_graph/models/: __init__.py  condition.py  edges.py  medication.py  side_effect.py  slug.py
src/med_graph/queries/: graph.py  medications.py  results.py
tests/fixtures/: faers_fluoxetine.json  faers_sertraline.json  rxclass_members_d003865.json  rxclass_members_d003866.json
tests/integration/: test_graph_client.py  test_ingest.py  test_queries_live.py
tests/unit/: test_api.py  test_cli.py  test_client_config.py  test_conditions.py  test_dataset_conditions.py  test_dataset_csv.py  test_graph_query.py  test_indication_match.py  test_indications.py  test_loader.py  test_models.py  test_openfda.py  test_openfda_label.py  test_queries.py  test_rxclass.py  test_rxclass_pharmacology.py  test_schema.py  test_snapshot.py
(+12 files in other folders)
