[project]
name = "med-graph"
version = "0.1.0"
description = "Medication knowledge graph for condition-medication-side-effect relationships"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "neo4j>=5.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "testcontainers[neo4j]>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
med-graph = "med_graph.cli:main"
med-graph-api = "med_graph.api.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/med_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running Neo4j instance (docker)",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["src/med_graph"]
